# py-d2

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CNAME  README.md  graph.d2  mypy.ini  poetry.toml  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: custom.md
.github/config/: changelog_configuration.json
.github/workflows/: ci.yml  coverage.yml  run.yml
docs/: index.md  index.rst  release.md
public/attachments/pdf/ocr/: ocr_result.json  ocr_result.txt
src/hello/: main.py
src/pdf_parse/: multi_pdf_parse.py  new_pdf_from_ocr.py  single_pdf_parse.py
src/py_d2/: D2Connection.py  D2Diagram.py  D2Link.py  D2Node.py  D2Shape.py  D2Style.py  __init__.py  connection.py  diagram.py  helpers.py  main.py  shape.py  style.py
tests/: __init__.py  conftest.py
tests/test_hello/: test_hello.py
tests/test_pdf_parse/: __init__.py  test_multi_pdf_parse.py  test_new_pdf_from_ocr.py  test_single_pdf_parse.py
tests/test_py_d2/: test_d2_connection.py  test_d2_diagram.py  test_d2_layer.py  test_d2_link.py  test_d2_node.py  test_d2_shape.py  test_d2_style.py  test_helpers.py  test_main.py
